[package]
name = "twentytwo"
version = "0.1.0"
authors = ["Steven Pease <peasteven@gmail.com>"]

[dependencies]
serde_derive = "1.0.80"
serde = "1.0.80"
failure = "0.1.3"
maplit = "1.0.1"
names = "0.11.0"
heck = "0.3.0"
chrono = "0.4.6"
rand = "0.5.5"
shrinkwraprs = "0.2.0"
log = "0.4.6"
env_logger = "0.5.13"
